--- a/Portfolio/React/my-app/src/App.css
+++ b/Portfolio/React/my-app/src/App.css
@@ -1,38 +1,74 @@
-.App {
+.footer {
+  margin-top: 300px;
   text-align: center;
+  clear:both
+}
+.Navigation {
+  height: 75px;
+  text-align: center;
+  width: 100%;
+  padding: 18px 0 0;
+  position: relative;
+  z-index: 999;
+}
+nav li:hover{
+  text-decoration: underline;
+}
+nav li {
+  display: inline-block;
+  text-transform: uppercase;
+  letter-spacing: 0.05em;
+  font-size: calc(1px + 2vmin);
+  height: 1.8em;
+}
+li {
+    display: list-item;
+    margin-left : 2.5%;
+    margin-right : 2.5%;
+}
+a {
+  color:white;
+  text-decoration: unset;
+}
+.legals {
+  display: inline-block;
+  margin-right : 10px;
+  margin-left : 10px;
+  position: relative;
+}
+hr {
+  width: 95%;
+  padding: 0;
+  margin: 0;
+  margin-left: 2.5%;
+}
+#Nav {
+  position: sticky;
+  display: inline-block;
+  vertical-align: middle;
+  z-index: 98;
+}
+#ReservHidd {
+  display: none;
+  height: 330px;
+  font-family: arial bold;
+  font-size: 30px;
+  text-align: center;
+  font-weight: bold;
+}
+#Err {
+  display: none;
+  height: 330px;
+  font-family: arial bold;
+  font-size: 30px;
+  text-align: center;
+  font-weight: bold;
+}
+h1 {
+font-family: bronova;
+color: white;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h3 {
+font-family: bronova;
 }
